Add Jackson-based BodyReader and BodyWriter
Closes #4